# diss

./: .gitignore  README.md  analyze_gnms.py  bash-commands.md  bashCheatSheet.md  config.json  config_example.json  consolidate_results.jl  dev_gnmC.py  exp_diff.ipynb  generate_inputs.py  gnm copy.jl  gnm-docs.md  gnm.py  gnm_base.py  gnm_testing.py  inspect_hw_data.py  main copy.py  main.py  main2.py  main_2.py  main_analyze.py  main_g2c.py  main_parallel.py  main_synthetic.py  main_weighted_test.jl  ref.bib  req.txt  run_gnms.py  seed_network.py  slurm_consolidate.jl  slurm_prep.jl  temp.py  temp_main.py  test.py  utils.py  weighted_generative_model.jl  xxx.py
cpp-gnms/gnm-run/: SpikeSet.cpp  SpikeTrain.cpp  TestData.h  WeightedGNM.cpp  mainSlurmPrep.cpp
cpp-gnms/gnm-run/testData/: syntheticDataDistances.h5
cpp-gnms/gnm-run/testDataWeights/: A.h5  D.h5
g2c_data/: CMakeLists.txt  g2c_data.py  spike_dset  spike_train.py
g2c_data/spike_dset.dSYM/Contents/Resources/DWARF/: spike_dset
gnm/: centrality  centrality.cpp  config.json  exp_diff.html  exp_diff.ipynb  get_norm.jl  gnm.cpp  gnm.h  gnm.jl  gnm.py  gnm_analyze.jl  gnm_testing.py  gnm_utils.jl  gnmc.cpp  graph_utils.jl  jitter.jl  ks_test  ks_test.cpp  main_analyze.jl  main_dir_prep.jl  main_slurm_combine.jl  main_slurm_prep.jl  main_slurm_preprocess.jl  main_slurm_run.jl  main_slurm_wrun.jl  main_test.jl  main_weighted_run.jl  main_weighted_slurm_prep.jl  main_weighted_test.jl  setup.py  slurm.jl  spike_sample.jl  spike_set.jl  spike_train.jl  sttc.jl  test_data.jl  xxx.jl  z_test1 copy.jl  z_test1.jl
gnm-analyze/: analyze_gnms.py  config.json  utils.py
gnm-analyze/results/: results.csv  results_.csv
gnm-analyze/results/Charlesworth2015/: ctx10.h5  ctx11.h5  ctx14.h5  ctx17.h5  ctx18.h5  ctx21.h5  ctx24.h5  ctx25.h5  ctx28.h5  ctx29.h5  ctx7.h5  hpc10.h5  hpc11.h5  hpc13.h5  hpc14.h5  hpc15.h5  hpc17.h5  hpc18.h5  hpc19.h5  hpc20.h5  hpc21.h5  hpc24.h5  hpc25.h5  hpc26.h5  hpc27.h5  hpc28.h5  hpc29.h5  hpc7.h5  hpc9.h5
gnm-run/: CMakeLists.txt  GNM.cpp  GNM.h  STTC.cpp  STTC.h  Slurm.cpp  Slurm.h  Slurm.py  SpikeSet.cpp  SpikeSet.h  SpikeTrain.cpp  SpikeTrain.h  SyntheticData.cpp  TestDataWeights.cpp  TestDataWeights.h  WeightedGNM.cpp  WeightedGNM.h  main.cpp  mainSlurmCombine.cpp  mainSlurmCombine.py  mainSlurmPrep.cpp  mainSlurmRun.cpp  mainSyntheticTest.cpp  mainTestWeights.cpp  slurm_check_errors.sh  slurm_clean.sh  slurm_submit_array.sh  syntheticTest.cpp
gnm-run-weights/: CMakeLists.txt  GNM.cpp  GNM.h  TestData.cpp  TestData.h  WeightedGNM.cpp  WeightedGNM.h  WeightedModel.h  mainTest.cpp  mainTestWeights.cpp
gnm-run-weights/testData/: testKall.h5
gnm-run/cmake-deploy/: slurmRun
gnm-run/testData/: testKall.h5
gnm-test-data/: r_clu_avg.csv  r_clu_diff.csv  r_clu_max.csv  r_clu_min.csv  r_clu_prod.csv  r_deg_avg.csv  r_deg_diff.csv  r_deg_max.csv  r_deg_min.csv  r_deg_prod.csv  r_matching.csv  r_neighbors.csv  r_spatial.csv  testing-info.md
gnm/analysis/: analysis.ipynb  analysis_energy.ipynb  analysis_energy.jl  analysis_pre.ipynb  anaylsis_energy.jl
gnm/analysis-weighted/: analysis_weigthed.jl  graphs.ipynb  main_slurm_prep.jl  main_weighted.jl  xxx.ipynb  xyz.ipynb
gnm/centrality.dSYM/Contents/Resources/DWARF/: centrality
gnm/derivative-proofs/: bm_jvp.jl  checks copy.nb  checks.nb  proof.jl  proof2 copy.jl  proof2.jl  proof_p1.jl  proof_p2.jl  proof_p3.jl  proof_p4.jl  proof_p5.jl
gnm/ks_test.dSYM/Contents/: Info.plist
gnm/ks_test.dSYM/Contents/Resources/DWARF/: ks_test
gnm/minimal_examples/: 1_obj_func.ipynb  2_tanget_approx.ipynb  example_imports.jl  tanget_approx.ipynb
gnm/norm-tests/: proof.jl  xxx.jl  z_test1 copy.jl  z_test1.jl
gnm/paper-gnm/: gnm.jl  main_weighted_test.jl
gnm/test/: results.h5
jl/: exp_diff.ipynb  gnm.jl  gnm_analyze.jl  gnm_weighted.jl  graph_utils.jl  main.jl  main_test.jl  main_weighted_test copy.jl  main_weighted_test.jl  test.jl  test.py  test_data.jl
jl/test/: dk_coordinates.mat  results.h5
jl/test-weights/: demo_data.mat
meetings/: 23-05-23.md  23-05-29.md  23-06-05.md  23-06-12.md  23-06-19.md  23-07-03.md  29-05-23.md  NN overview.md
notes/: 23-06-05.md  23-06-12.md  xxx.md
old/: analysis_energy.ipynb  analysis_energy.jl  debug.py  import_sttc_C.py  main.py  mainSlurmCombine.cpp  main_analyze.jl  main_slurm_combine.jl  main_slurm_jitter.jl  run_gnms.py  slurm.jl  slurm_generate_inputs.py  slurm_run_gnms.py  spike_dset.jl  spike_sample.jl  sps_derivative.jl  x.csv  xx.jl  xxx.ipynb  xyz.ipynb  y.csv
old/cpp-gnms/gnm-analyze/: analyze_gnms.py
old/cpp-gnms/gnm-run/: CMakeLists.txt  STTC.cpp  Slurm.h  SpikeSet.cpp  SpikeSet.h  SpikeTrain.h  WeightedGNM.h  mainSlurmCombine.py  mainTest.cpp  mainTestWeights.cpp
old/cython-example-build/: example.C  setup.py
old/cython-example-build/example.dSYM/Contents/Resources/DWARF/: example
old/g2c_data/: g2c_data.py  spike_dset.cpp  spike_train.cpp  spike_train.py
old/g2c_data/spike_dset.dSYM/Contents/: Info.plist
old/gnm/: bridge.cpp  centrality.cpp  gnm.h  gnm_testing.py  setup.py
old/gnm-run-weights/: GNM.h  SpikeTrain.cpp  TestData.cpp  mainTest.cpp
old/gnm-run-weights/testDataWeights/: Ainit.h5
old/gnm/centrality.dSYM/Contents/: Info.plist
old/gnm/centrality.dSYM/Contents/Resources/DWARF/: centrality
old/sttc/: setup.py  test_tiling.py
other/cython-example-build/: example  hw
references/: match_ind.py
report/: ideas.qmd  ref.bib
slurm/: slurm_submit_array.sh
spike_corr/: setup.py  sttc.C  sttc.py  test.py  test_sttc_C.py  test_tiling.py  tiling.C
spike_corr/STTC.egg-info/: top_level.txt
sttc/: sttc.C  test_sttc.R  test_tiling.py
sttc/STTC.egg-info/: PKG-INFO  SOURCES.txt
test/: example_binarised_connectomes.mat  results.h5
utils/: analysis.py  config.py  g2c_data.py  gnm_utils.py  graph.py  seed_network.py  utils.py
